--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
 	<title>Code Review 06</title>
 </head>
 <body>
+	<div class="container">
+		<div id="texthere" class="row">
+	
+
+		</div>
+		
 
 
-
+		
+	</div>
 
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-	<script src="js/dating.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
