--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<title>Code Review 06</title>
+	<link rel='stylesheet' type='text/css' href='styles.css'>
 </head>
 <body>
-	<div class="container">
-		<div id="texthere" class="row">
+	<div class="container bg-success">
+		<div>
+			<p class="h2 p-3 text-center">Visited Locations</p>
+		</div>
+		<div id="texthere" class="row text-center">
 	
 
+		</div>
+		<div id="testx">
+			
 		</div>
 		
 
